frontend/src/styles/OperationSection.css
.operation-description {
    max-width: 50vw;
    text-align: justify;
    margin: 0 auto 30px;
    font-size: 0.8em;
    color: #ADB5BD;
}

.operation-controls-description {
    max-width: 50vw;
    text-align: justify;
    margin: 0 auto 30px;
    font-size: 0.8em;
    color: #ADB5BD;
    max-width: 50vw;
}

.operation-controls-items {
    text-align: center;
    display: flex;
    gap: 60px;
    justify-content: center;
    align-items: stretch;
}

/* Grid layout for the other checkboxes */
.checkboxes-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, auto);
    column-gap: 30px;
    text-align: left;
}

.control-item {
    margin-bottom: 30px;
}

.select-drop-down-items {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 12px;
    padding: 10px;
}

.select-range-items {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    gap: 12px;
    padding: 10px;
}

.range-selector {}

.range-text {
    font-size: 0.8em;
    color: #ADB5BD;
}

.range-form {
    width: 60px;
}

.slider {
    flex-grow: 1;
    height: 5px;
    width: auto;
    background: #d3d3d3;
}

.slider-info-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 0.7em;
    color: #ADB5BD;
    position: relative;
}

.slider-label-danger {
    color: #F25C54;
    font-weight: 600;
}

.operation-controls-buttons {
    display: flex;
    gap: 60px;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
}

.operation-button {
    padding: 10px 15px;
    background-color: #DEE2E6;
    color: #110E1B;
    border: none;
    border-radius: 2px;
    cursor: pointer;
}

.operation-button.disabled {
    cursor: not-allowed;
    opacity: 0.7;
}

.download-button {
    padding: 10px 15px;
    background-color: #386641;
    color: #DEE2E6;
    border: none;
    border-radius: 2px;
    cursor: pointer;
}

select,
input {
    background-color: transparent;
    border: 1px solid #ADB5BD;
    font-family: "Source Code Pro", monospace;
    text-align: center;
    padding: 0.3em;
}

.translation-progress {
    margin-top: 10px;
    width: 100%;
}

.translation-progress progress {
    width: 100%;
    height: 8px;
}

.progress-text {
    display: flex;
    justify-content: space-between;
    font-size: 0.8em;
    margin-top: 4px;
}

/* CSS for Translation Timer */

.translation-progress {
    text-align: center;
    padding: 20px;
}

.translation-progress img {
    max-width: 20vw;
    opacity: 75%;
}

@keyframes pulse {
    0% {
        color: #6C757D;
    }

    50% {
        color: #DEE2E6;
    }

    100% {
        color: #6C757D;
    }
}

.translation-progress-eta {
    animation: pulse 2s infinite ease-in-out;
}

.translation-progress-text {
    font-size: 0.8em;
    color: #ADB5BD;
    max-width: 50vw;
}

